# gtx

./: CMakeLists.txt  README.md
include/gtx/: device.hpp  factory.hpp  surface.hpp  tx-atlas.hpp  tx-grid.hpp  tx-page.hpp  vlist.hpp
include/gtx/dx/: dx.hpp  macro.hpp
include/gtx/geom/: mat.hpp  vec.hpp  xform.hpp
include/gtx/gl/: gl.hpp
include/gtx/pixel/: pixel.hpp
include/gtx/shader/: polyline.hpp
include/gtx/vk/: vk.hpp
src/: dx-polyline.cpp  dx.cpp  gl-polyline.cpp  gl.cpp  glsl320es-polyline.hpp  glsl330-polyline.hpp  hlsl-polyline.hpp  page-dx.cpp  page-gl.cpp  page-vk.cpp  polyline-glsl-320es.cpp  polyline-glsl-330.cpp  polyline-hlsl.cpp  shader-dx.cpp  spirv-polyline.hpp  vk-polyline.cpp  vk.cpp
src/shaders/: compile.cmd  polyline-frag.glsl  polyline-geom.glsl  polyline-vert.glsl  polyline.450.frag.glsl  polyline.450.geom.glsl  polyline.450.vert.glsl
src/shaders/tmp/: polyline.frag.450.glsl.h  polyline.geom.450.glsl.h  polyline.geom.glsl450.h  polyline.vert.glsl450.h
